--- a/projects.json
+++ b/projects.json
@@ -13,7 +13,7 @@
     {
       "id": 2,
       "name": "Craches-FIX",
-      "image": "/images/projects/Craches-FIX.png",
+      "image": "images/projects/Craches-FIX.png",
       "description": "Website provides You have a workforce specialized in everything related to maintenance and repair",
       "links": {
         "github": "https://github.com/HELAL15/Craches-FIX/",
@@ -23,7 +23,7 @@
     {
       "id": 3,
       "name": "Valet-Parking",
-      "image": "/images/projects/valet-parking.png",
+      "image": "images/projects/valet-parking.png",
       "description": "website that provides parking services",
       "links": {
         "github": "https://github.com/HELAL15/Valet-Parking",
@@ -33,7 +33,7 @@
     {
       "id": 4,
       "name": "Maqalat.M",
-      "image": "/images/projects/maqalat.png",
+      "image": "images/projects/maqalat.png",
       "description": "website for publish posts and articles for writers and poets",
       "links": {
         "github": "https://github.com/HELAL15/Maqalat.M",
@@ -43,7 +43,7 @@
     {
       "id": 5,
       "name": "Rajaa-Faidah",
-      "image": "/images/projects/rajaa-faidah.png",
+      "image": "images/projects/rajaa-faidah.png",
       "description": "personal website for a writer and a poet",
       "links": {
         "github": "https://github.com/HELAL15/Rajaa-Faidah",
@@ -53,7 +53,7 @@
     {
       "id": 6,
       "name": "Dashboard",
-      "image": "/images/projects/dashboard.png",
+      "image": "images/projects/dashboard.png",
       "description": "Dashboard for managing",
       "links": {
         "github": "https://github.com/HELAL15/Dashboard",
@@ -63,7 +63,7 @@
     {
       "id": 7,
       "name": "Jungle House",
-      "image": "/images/projects/jungle.png",
+      "image": "images/projects/jungle.png",
       "description": "website for tourist services in the jungle",
       "links": {
         "github": "https://github.com/HELAL15/Jungle-House-Website",
@@ -73,7 +73,7 @@
     {
       "id": 8,
       "name": "low firms",
-      "image": "/images/projects/low-firms.png",
+      "image": "images/projects/low-firms.png",
       "description": "website for company provides a low services for ohter organizations",
       "links": {
         "github": "https://github.com/HELAL15/lawyer-website",
@@ -83,7 +83,7 @@
     {
       "id": 9,
       "name": "space tourism",
-      "image": "/images/projects/space-tourism.png",
+      "image": "images/projects/space-tourism.png",
       "description": "A space tourism website offering information about space and spaceships",
       "links": {
         "github": "https://github.com/HELAL15/space-tourism-website",
@@ -93,7 +93,7 @@
     {
       "id": 10,
       "name": "craftsMen",
-      "image": "/images/projects/craftsMen.png",
+      "image": "images/projects/craftsMen.png",
       "description": "Website provides You have a workforce specialized in everything related to maintenance and repair",
       "links": {
         "github": "https://github.com/HELAL15/craftsMen",
